--- a/.github/actions/build-push-container/action.yml
+++ b/.github/actions/build-push-container/action.yml
@@ -74,20 +74,16 @@ runs:
         # Define dependency mapping based on CMakeLists.txt
         declare -A DEPS
         DEPS["base"]=""
-        DEPS["openssl"]="base"
         DEPS["bcc"]="base"
         DEPS["libuv"]="base"
         DEPS["cpp_misc"]="base"
         DEPS["go"]="base"
-        DEPS["abseil_cpp"]="base"
         DEPS["libmaxminddb"]="base"
         DEPS["libbpf"]="base"
-        DEPS["curl"]="base openssl"
-        DEPS["grpc_cpp"]="base abseil_cpp openssl"
-        DEPS["aws_sdk"]="base openssl curl"
-        DEPS["gcp_cpp"]="base openssl curl grpc_cpp"
-        DEPS["opentelemetry"]="base grpc_cpp"
-        DEPS["final"]="base openssl curl bcc libuv aws_sdk cpp_misc go grpc_cpp abseil_cpp libmaxminddb gcp_cpp opentelemetry libbpf"
+        DEPS["aws_sdk"]="base"
+        DEPS["gcp_cpp"]="base"
+        DEPS["opentelemetry"]="base"
+        DEPS["final"]="base bcc libuv aws_sdk cpp_misc go libmaxminddb gcp_cpp opentelemetry libbpf"
         
         # Compute direct hashes for all directories upfront
         declare -A DIRECT_HASHES
