--- a/.github/workflows/build_and_push_parallel.yml
+++ b/.github/workflows/build_and_push_parallel.yml
@@ -75,6 +75,7 @@ jobs:
     name: Build openssl image
     runs-on: ubuntu-24.04
     needs: build-base
+    if: false
     steps:
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -175,6 +176,7 @@ jobs:
     name: Build abseil_cpp image
     runs-on: ubuntu-24.04
     needs: build-base
+    if: false
     steps:
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -236,6 +238,7 @@ jobs:
     name: Build curl image
     runs-on: ubuntu-24.04
     needs: [build-base, build-openssl]
+    if: false
     steps:
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -257,6 +260,7 @@ jobs:
     name: Build grpc_cpp image
     runs-on: ubuntu-24.04
     needs: [build-base, build-abseil-cpp, build-openssl]
+    if: false
     steps:
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -277,7 +281,7 @@ jobs:
   build-aws-sdk:
     name: Build aws_sdk image
     runs-on: ubuntu-24.04
-    needs: [build-base, build-openssl, build-curl]
+    needs: [build-base]
     steps:
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -298,7 +302,7 @@ jobs:
   build-gcp-cpp:
     name: Build gcp_cpp image
     runs-on: ubuntu-24.04
-    needs: [build-base, build-openssl, build-curl, build-grpc-cpp]
+    needs: [build-base]
     steps:
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -319,7 +323,7 @@ jobs:
   build-opentelemetry:
     name: Build opentelemetry image
     runs-on: ubuntu-24.04
-    needs: [build-base, build-grpc-cpp]
+    needs: [build-base]
     steps:
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -342,15 +346,11 @@ jobs:
     runs-on: ubuntu-24.04
     needs: [
       build-base,
-      build-openssl,
-      build-curl,
       build-bcc,
       build-libuv,
       build-aws-sdk,
       build-cpp-misc,
       build-go,
-      build-grpc-cpp,
-      build-abseil-cpp,
       build-libmaxminddb,
       build-gcp-cpp,
       build-opentelemetry,
