fix resolution of grpc cpp plugin

--- a/opentelemetry/Dockerfile
+++ b/opentelemetry/Dockerfile
@@ -24,5 +24,5 @@ RUN PROTO_FILES=$(find ./opentelemetry -name '*service.proto'); \
     for PROTO_FILE in ${PROTO_FILES}; do \
       DIR=$(dirname $PROTO_FILE); \
       mkdir -p $HOME/install/$DIR; \
-      protoc -I . --cpp_out=$HOME/install --grpc-cpp_out=$HOME/install ${PROTO_FILE}; \
+      protoc -I . --cpp_out=$HOME/install --plugin=protoc-gen-grpc=`which grpc_cpp_plugin` --grpc_out=$HOME/install ${PROTO_FILE}; \
     done
