consolidate package installations and add sudo

--- a/final/Dockerfile
+++ b/final/Dockerfile
@@ -28,53 +28,47 @@ FROM $libbpf_IMAGE_TAG as build-libbpf
 # Bring everything together
 FROM build-main AS build-result
 
-# docker packages
+# Package definitions
 ARG PKG_DOCKER="docker.io docker-compose"
-RUN apt-get -y update && apt-get install --no-install-recommends -y $PKG_DOCKER
-
-# kernel tools packages
 ARG PKG_KERNEL_TOOLS="kmod selinux-utils"
-RUN apt-get -y update && apt-get install --no-install-recommends -y $PKG_KERNEL_TOOLS
-
-# core tools packages
 ARG PKG_CORE_TOOLS="pass"
-RUN apt-get -y update && apt-get install --no-install-recommends -y $PKG_CORE_TOOLS
-
-# dev tools packages
 ARG PKG_DEV_TOOLS="vim-nox lsof"
-RUN apt-get -y update && apt-get install --no-install-recommends -y $PKG_DEV_TOOLS
-
-# aws tools packages
 ARG PKG_AWS_TOOLS="awscli"
-RUN apt-get -y update && apt-get install --no-install-recommends -y $PKG_AWS_TOOLS
+ARG BENV_JAVA_VERSION=17
+ARG PKG_EXTRA_PACKAGES="openjdk-${BENV_JAVA_VERSION}-jdk-headless google-cloud-sdk google-cloud-sdk-skaffold"
+
+RUN sudo sh -c 'echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] http://packages.cloud.google.com/apt cloud-sdk main" | tee -a /etc/apt/sources.list.d/google-cloud-sdk.list' && \
+    curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add - && \
+    sudo apt-get -y update && \
+    sudo apt-get install --no-install-recommends -y \
+        $PKG_DOCKER \
+        $PKG_KERNEL_TOOLS \
+        $PKG_CORE_TOOLS \
+        $PKG_DEV_TOOLS \
+        $PKG_AWS_TOOLS \
+        $PKG_EXTRA_PACKAGES && \
+    sudo apt-get clean && \
+    sudo rm -rf /var/lib/apt/lists/*
 
 ARG PKG_PYTHON_LIBS="ijson docker"
 RUN pip3 install $PKG_PYTHON_LIBS
 
-# set up apt repositories for google-cloud-sdk
-RUN echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] http://packages.cloud.google.com/apt cloud-sdk main" | tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
-RUN curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
-
-ARG BENV_JAVA_VERSION=17
-ARG PKG_EXTRA_PACKAGES="openjdk-${BENV_JAVA_VERSION}-jdk-headless google-cloud-sdk google-cloud-sdk-skaffold"
-RUN apt-get -y update && apt-get install -y --no-install-recommends $PKG_EXTRA_PACKAGES
-
 ## java version required by render framework parser
 RUN case $(uname -m) in \
-      x86_64) update-alternatives --set java /usr/lib/jvm/java-${BENV_JAVA_VERSION}-openjdk-amd64/bin/java && \
-              update-alternatives --set javac /usr/lib/jvm/java-${BENV_JAVA_VERSION}-openjdk-amd64/bin/javac \
+      x86_64) sudo update-alternatives --set java /usr/lib/jvm/java-${BENV_JAVA_VERSION}-openjdk-amd64/bin/java && \
+              sudo update-alternatives --set javac /usr/lib/jvm/java-${BENV_JAVA_VERSION}-openjdk-amd64/bin/javac \
               ;; \
-      aarch64) update-alternatives --set java /usr/lib/jvm/java-${BENV_JAVA_VERSION}-openjdk-arm64/bin/java  && \
-              update-alternatives --set javac /usr/lib/jvm/java-${BENV_JAVA_VERSION}-openjdk-arm64/bin/javac \
+      aarch64) sudo update-alternatives --set java /usr/lib/jvm/java-${BENV_JAVA_VERSION}-openjdk-arm64/bin/java  && \
+              sudo update-alternatives --set javac /usr/lib/jvm/java-${BENV_JAVA_VERSION}-openjdk-arm64/bin/javac \
               ;; \
     esac
 
 
 # gradle
-RUN wget https://services.gradle.org/distributions/gradle-7.3.3-bin.zip -O /usr/local/lib/gradle.zip
+RUN sudo wget https://services.gradle.org/distributions/gradle-7.3.3-bin.zip -O /usr/local/lib/gradle.zip
 
 # swagger-codegen-cli, used to build the API docs
-RUN wget \
+RUN sudo wget \
   https://repo1.maven.org/maven2/io/swagger/swagger-codegen-cli/2.4.12/swagger-codegen-cli-2.4.12.jar \
   -O /usr/local/lib/swagger-codegen-cli.jar
 
@@ -106,6 +100,6 @@ COPY LICENSE.txt $HOME/
 COPY NOTICE.txt $HOME/
 
 ARG BENV_UNMINIMIZE=false
-RUN (which unminimize && $BENV_UNMINIMIZE && (yes | unminimize)) || true
+RUN (which unminimize && $BENV_UNMINIMIZE && (yes | sudo unminimize)) || true
 
 RUN echo 'if [ -e "$HOME/src/dev/build-env/profile" ]; then source "$HOME/src/dev/build-env/profile"; fi' >> $HOME/.profile
