export PATH to .bashrc in base container

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -100,6 +100,7 @@ RUN set -ex; \
     touch $HOME/test || (echo "ERROR: File creation test failed" && exit 1); \
     rm $HOME/test || (echo "ERROR: File removal test failed" && exit 1)
 
-# setup path
+# setup path in both ENV and shell profile
 ENV PATH="$HOME/install/bin:/usr/local/go/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+RUN echo 'export PATH="$HOME/install/bin:/usr/local/go/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"' >> $HOME/.bashrc
 
