bring libuv1 removal back to the uv container as it was removing cmake

--- a/libuv/Dockerfile
+++ b/libuv/Dockerfile
@@ -10,6 +10,7 @@ ARG NPROC
 ARG BUILD_CFLAGS
 
 WORKDIR $HOME
+RUN sudo apt remove -y libuv1
 COPY libuv libuv
 WORKDIR $HOME/libuv
 RUN ./autogen.sh
