--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -103,9 +103,8 @@ RUN set -ex; \
 ENV PATH="$HOME/install/bin:/usr/local/go/bin:$PATH"
 RUN echo 'export PATH="$HOME/install/bin:/usr/local/go/bin:$PATH"' >> $HOME/.profile
 
-# set UID, GID, UNAME, GNAME as environment variables
+# set UID, GID
 ENV UID=${UID}
 ENV GID=${GID}
-ENV UNAME=${UNAME}
-ENV GNAME=${GNAME}
+# note: we do not export UNAME as it interferes with LZ4 builds
 
