--- a/aws_sdk/Dockerfile
+++ b/aws_sdk/Dockerfile
@@ -6,7 +6,7 @@
 ARG base_IMAGE_TAG
 ARG CMAKE_BUILD_TYPE
 
-FROM $base_IMAGE_TAG
+FROM $base_IMAGE_TAG AS build
 
 ARG NPROC
 
@@ -29,3 +29,7 @@ RUN cmake \
 
 RUN nice make -j${NPROC:-3}
 RUN nice make install
+
+# Runtime stage - copy only necessary artifacts
+FROM $base_IMAGE_TAG
+COPY --from=build $HOME/install $HOME/install
