--- a/opentelemetry/Dockerfile
+++ b/opentelemetry/Dockerfile
@@ -5,7 +5,7 @@
 
 ARG base_IMAGE_TAG
 
-FROM $base_IMAGE_TAG
+FROM $base_IMAGE_TAG AS build
 
 WORKDIR $HOME
 COPY --chown=${UID}:${GID} opentelemetry-proto opentelemetry-proto
@@ -26,3 +26,7 @@ RUN PROTO_FILES=$(find ./opentelemetry -name '*service.proto'); \
       mkdir -p $HOME/install/$DIR; \
       protoc -I . --cpp_out=$HOME/install --plugin=protoc-gen-grpc=`which grpc_cpp_plugin` --grpc_out=$HOME/install ${PROTO_FILE}; \
     done
+
+# Runtime stage - copy only necessary artifacts
+FROM $base_IMAGE_TAG
+COPY --from=build $HOME/install $HOME/install
