re-comment clause that was accidentally un-commented

--- a/gcp_cpp/Dockerfile
+++ b/gcp_cpp/Dockerfile
@@ -54,7 +54,7 @@ RUN nice cmake \
   -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} \
 	$HOME/google-cloud-cpp
 RUN nice make -j${NPROC:-3}
-RUN nice make -j${NPROC:-3} install
+#RUN nice make -j${NPROC:-3} install
 
 # Runtime stage - copy only necessary artifacts
 FROM $base_IMAGE_TAG
