--- a/opentelemetry/Dockerfile
+++ b/opentelemetry/Dockerfile
@@ -17,14 +17,14 @@ RUN PROTO_FILES=$(find ./opentelemetry -name '*.proto'); \
     for PROTO_FILE in ${PROTO_FILES}; do \
       DIR=$(dirname $PROTO_FILE); \
       mkdir -p $HOME/install/$DIR; \
-      protoc -I . --cpp_out=$HOME/install ${PROTO_FILE}; \
+      protoc -I . --experimental_allow_proto3_optional --cpp_out=$HOME/install ${PROTO_FILE}; \
     done
 
 RUN PROTO_FILES=$(find ./opentelemetry -name '*service.proto'); \
     for PROTO_FILE in ${PROTO_FILES}; do \
       DIR=$(dirname $PROTO_FILE); \
       mkdir -p $HOME/install/$DIR; \
-      protoc -I . --cpp_out=$HOME/install --plugin=protoc-gen-grpc=`which grpc_cpp_plugin` --grpc_out=$HOME/install ${PROTO_FILE}; \
+      protoc -I . --experimental_allow_proto3_optional --cpp_out=$HOME/install --plugin=protoc-gen-grpc=`which grpc_cpp_plugin` --grpc_out=$HOME/install ${PROTO_FILE}; \
     done
 
 # Runtime stage - copy only necessary artifacts
