--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -23,7 +23,7 @@ ARG PKG_LINTERS="clang-format clang-tidy shellcheck"
 ARG PKG_MANAGERS="pkg-config rpm"
 ARG PKG_KERNEL="dkms build-essential"
 ARG PKG_DEV="gdb cgdb tmux strace"
-ARG PKG_LIBS="libc-ares-dev libelf-dev libssl-dev libzstd-dev libgrpc-dev libcurl4-openssl-dev libabsl-dev protobuf-compiler-grpc libcurlpp-dev libgrpc++-dev"
+ARG PKG_LIBS="libc-ares-dev libelf-dev libssl-dev libzstd-dev libgrpc-dev libcurl4-openssl-dev libabsl-dev protobuf-compiler-grpc libcurlpp-dev libgrpc++-dev libprotobuf-dev"
 ARG PKG_PY_TEST="python3-pytest python3-dev python3-pip python3-setuptools python3-wheel pylint3"
 ARG PKG_JAVA="default-jdk-headless"
 ARG PKG_LLVM="llvm-11-dev libclang-11-dev clang-11"
