add libpolly, required by bcc

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -26,7 +26,7 @@ ARG PKG_DEV="gdb cgdb tmux strace"
 ARG PKG_LIBS="libc-ares-dev libelf-dev libssl-dev libzstd-dev libgrpc-dev libcurl4-openssl-dev libabsl-dev protobuf-compiler-grpc libcurlpp-dev libgrpc++-dev libprotobuf-dev"
 ARG PKG_PY_TEST="python3-pytest python3-dev python3-pip python3-setuptools python3-wheel pylint"
 ARG PKG_JAVA="default-jdk-headless"
-ARG PKG_LLVM="llvm-16-dev libclang-16-dev clang-16"
+ARG PKG_LLVM="llvm-16-dev libclang-16-dev clang-16 libpolly-16-dev"
 ARG PKG_MAKE="cmake ccache autoconf autoconf-archive automake libtool make"
 ARG PKG_BCC="bison flex zip"
 ARG PKG_LIBBPF="zip pkg-config libelf-dev zlib1g-dev libbfd-dev libcap-dev"
